# transaction-classifier-toolkit

./: .gitignore  DEPRECATED.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
classifier/: __init__.py  revenue_classifier.py
data/: rbf_lender_list.json  revenue_patterns.json
models/: __init__.py
