[project]
name = "transaction-classifier-toolkit"
version = "0.1.0"
description = "Transaction classification toolkit - Identifies revenue types, MCA payments, wire types, and deposit categories"
authors = [{ name = "Silv MT Holdings" }]
requires-python = ">=3.11"
dependencies = [
    "bankstatement-parser-toolkit",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["classifier"]
